# MediaConverter

./: .gitignore  .travis.yml  Dockerfile  HOW_TO_COMPILE_FFMPEG  HOW_TO_HANDLE_SUBTITLES  Makefile  ONE_OFF_CMDS.md  README.md  alexa.py  alexa_rest.py  celery_daemon.conf  celery_handler.py  client.py  convert.py  dash.py  dash_daemon.conf  debounce_handler.py  dev_requirements.txt  devenv.nix  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  down_convert.py  fauxmo.py  file.py  install.sh  legacy_files_client.py  log.py  main.py  moov_atom.sh  movie_runner.py  os_install.sh  path.py  pyproject.toml  requirements.txt  settings.py  test_requirements.txt  tests.py  tv_runner.py  updater.py  (+2 more)
.github/workflows/: build.yml  pr.yml  publish.yml
tests/: conftest.py  test_convert.py  test_file.py  test_movie_runner.py  test_path.py  test_tvrunner.py  test_utils.py
tests/data/: 2_Eng.srt
tests/functional/: test_convert.py  test_movie_runner.py  test_path.py  test_tv_runner.py  test_utils.py
tests/integration/: conftest.py  test_movie_runner.py  test_tv_runner.py
tests/unit/: test_convert.py  test_file.py  test_movie_runner.py  test_path.py  test_tv_runner.py  test_tvrunner.py  test_utils.py
