[tool.poetry]
name = "MediaConverter"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.37.1"
requests = "^2.27.1"
qtfaststart = "^1.8"
celery = "^5.2.3"
Unidecode = "^1.3.2"

[tool.poetry.dev-dependencies]
mock = "^4.0.3"
bandit = "^1.7.1"
pytest = "^6.2.5"
pdbpp = "^0.10.3"
bpython = "^0.22.1"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
