[tool.poetry]
name = "MediaConverter"
version = "0.1.0"
description = ""
authors = ["Kevin Yokley <kyokley2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
wheel = "^0.38.1"
requests = "^2.27.1"
celery = "^5.2.3"
Unidecode = "^1.3.2"

[tool.poetry.group.dev.dependencies]
blessings = "^1.7"
pytest-socket = "^0.6.0"
faker = "^22.6.0"
mock = "^4.0.3"
bandit = "^1.7.1"
pytest = "^8.2.2"
pdbpp = "^0.10.3"
bpython = "^0.22.1"
black = "^24.3.0"
pytest-mock = "^3.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--disable-socket --ignore=tests/integration"
