[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--disable-socket --ignore=tests/integration"

[project]
authors = [
    {name = "Kevin Yokley", email = "kyokley2@gmail.com"},
]
requires-python = "<4.0,>=3.10"
dependencies = [
    "wheel<1.0.0,>=0.38.1",
    "requests<3.0.0,>=2.27.1",
    "celery<6.0.0,>=5.2.3",
    "Unidecode<2.0.0,>=1.3.2",
]
name = "MediaConverter"
version = "0.1.0"
description = ""

[dependency-groups]
dev = [
    "blessings<2.0,>=1.7",
    "pytest-socket<1.0.0,>=0.6.0",
    "faker<23.0.0,>=22.6.0",
    "mock<5.0.0,>=4.0.3",
    "bandit<2.0.0,>=1.7.1",
    "pytest<9.0.0,>=8.2.2",
    "pdbpp<1.0.0,>=0.10.3",
    "bpython<1.0.0,>=0.22.1",
    "black<25.0.0,>=24.3.0",
    "pytest-mock<4.0.0,>=3.6.1",
]
